--- a/wear/src/main/res/layout/guide_item.xml
+++ b/wear/src/main/res/layout/guide_item.xml
@@ -8,9 +8,9 @@
     <TextView
         android:id="@+id/textView"
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="match_parent"
         android:layout_gravity="center_vertical"
-        android:background="#4400ff00"
+        android:background="#FFabcdef"
         android:gravity="center"
         android:textColor="#000000"
         android:textSize="26sp" />
