--- a/wear/src/main/res/layout/guide_item.xml
+++ b/wear/src/main/res/layout/guide_item.xml
@@ -13,6 +13,7 @@
         android:background="#FFabcdef"
         android:gravity="center"
         android:textColor="#000000"
+        android:text="No Guides"
         android:textSize="26sp" />
 
 </FrameLayout>
