converted to list view

--- a/wear/src/main/res/layout/rect_activity_my.xml
+++ b/wear/src/main/res/layout/rect_activity_my.xml
@@ -8,8 +8,8 @@
     tools:context=".MyActivity"
     tools:deviceIds="wear_square">
 
-    <android.support.wearable.view.GridViewPager
-        android:id="@+id/gridViewPager"
+    <android.support.wearable.view.WearableListView
+        android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:keepScreenOn="true" />
