--- a/wear/src/main/res/layout/guide_item.xml
+++ b/wear/src/main/res/layout/guide_item.xml
@@ -1,19 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<com.peterpeterallie.watchandlearnbeta.ui.WearableListItemLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/guide_background"
-    android:layout_margin="10dp">
+    android:layout_height="80dp"
+    android:layout_margin="10dp"
+    android:gravity="center_vertical"
+    android:padding="5dp">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:textColor="#000000"
-        android:text="No Guides"
-        android:textSize="26sp" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/guide_background">
 
-</FrameLayout>
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_marginRight="16dp"
+            android:padding="5dp"
+            android:gravity="center"
+            android:textColor="@color/black" />
+
+    </RelativeLayout>
+
+</com.peterpeterallie.watchandlearnbeta.ui.WearableListItemLayout>
