--- a/wear/src/main/res/layout/guide_item.xml
+++ b/wear/src/main/res/layout/guide_item.xml
@@ -18,6 +18,7 @@
             android:layout_marginRight="16dp"
             android:padding="5dp"
             android:gravity="center"
+            android:text="No Step"
             android:textColor="@color/black" />
 
     </RelativeLayout>
