--- a/wear/src/main/res/layout/step_item.xml
+++ b/wear/src/main/res/layout/step_item.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/guide_background"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:background="@drawable/guide_background">
 
     <TextView
         android:id="@+id/textView"
@@ -12,8 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:gravity="center"
+        android:text="No Steps"
         android:textColor="#000000"
-        android:text="No Guides"
-        android:textSize="26sp" />
+        android:textSize="16sp" />
+
 
 </FrameLayout>
