--- a/mobile/src/main/res/layout/activity_show.xml
+++ b/mobile/src/main/res/layout/activity_show.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_height="match_parent">
     <TextView
         android:id="@+id/guide_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
         android:layout_gravity="center"
         android:textSize="20sp"/>
 
     <include layout="@layout/show_step"/>
 
     <LinearLayout
+        android:id="@+id/guide_buttons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_gravity="center"
         android:orientation="horizontal">
         <Button
@@ -32,4 +34,4 @@
             android:textSize="20sp"
             android:text="Next"/>
     </LinearLayout>
-</LinearLayout>
+</RelativeLayout>
