--- a/mobile/src/main/res/layout/show_step.xml
+++ b/mobile/src/main/res/layout/show_step.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
-    android:layout_height="300dp"
+    android:layout_height="wrap_content"
+    android:layout_below="@id/guide_title"
+    android:layout_above="@id/guide_buttons"
     android:layout_gravity="center"
     android:layout_margin="10dp"
     android:padding="5dp"
