--- a/wear/src/main/res/layout/step_item.xml
+++ b/wear/src/main/res/layout/step_item.xml
@@ -3,18 +3,40 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="10dp"
+    android:layout_margin="5dp"
+    android:padding="5dp"
     android:background="@drawable/guide_background">
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="No Steps"
-        android:textColor="#000000"
-        android:textSize="16sp" />
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_horizontal">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerCrop"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/placeholder"
+                android:visibility="visible"/>
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="No Steps"
+                android:layout_below="@+id/imageView"
+                android:textColor="#000000"
+                android:textSize="16sp" />
+        </RelativeLayout>
+
+
+    </ScrollView>
+
 
 
 </FrameLayout>
