--- a/mobile/src/main/res/layout/saved_guide.xml
+++ b/mobile/src/main/res/layout/saved_guide.xml
@@ -17,7 +17,8 @@ android:padding="6dip" >
             android:id="@+id/loading_icon"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:indeterminate="true" />
+            android:indeterminate="true"
+            android:visibility="invisible"/>
 
         <ImageView
             android:id="@+id/guide_icon"
