--- a/mobile/src/main/res/layout/show_step.xml
+++ b/mobile/src/main/res/layout/show_step.xml
@@ -35,7 +35,8 @@
                     android:id="@+id/loading_icon"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:indeterminate="true" />
+                    android:indeterminate="true"
+                    android:visibility="invisible"/>
                 <ImageView
                     android:id="@+id/step_image"
                     android:layout_height="300dp"
